Fixes pricing card spacing again

--- a/src/components/PricingCardGrid/PricingCard/PricingCard.module.sass
+++ b/src/components/PricingCardGrid/PricingCard/PricingCard.module.sass
@@ -14,6 +14,9 @@
   background: $whiteTheme
   box-shadow: 3px 3px 4px 1px $shadowColor
 
+  @media (max-width: 350px)
+    width: 80%
+
 .pricingCard__top
   height: 72px
   width: 100%
