--- a/src/components/PricingCardGrid/PricingCardGrid.module.sass
+++ b/src/components/PricingCardGrid/PricingCardGrid.module.sass
@@ -9,7 +9,7 @@
   display: flex
   flex-direction: row
   align-items: center
-  justify-content: space-around
+  justify-content: center
   flex-wrap: wrap
 
   @media (max-width: 1050px)
